--- a/src/main/resources/fxml/canvas.fxml
+++ b/src/main/resources/fxml/canvas.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/24" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dbeditor.controller.CanvasController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dbeditor.controller.CanvasController">
    <top>
       <ToolBar fx:id="toolBar" prefWidth="1280.0" BorderPane.alignment="CENTER">
         <items>
@@ -27,7 +27,7 @@
             <Button fx:id="btnUndo" disable="true" mnemonicParsing="false" onAction="#undo" text="↶ Undo" />
             <Button fx:id="btnRedo" disable="true" mnemonicParsing="false" onAction="#redo" text="↷ Redo" />
             <Separator orientation="VERTICAL" />
-            <Button fx:id="btnTheme" mnemonicParsing="false" onAction="#changeTheme" text="theme" />
+            <Button mnemonicParsing="false" onAction="#changeTheme" text="theme" />
             <Separator orientation="VERTICAL" />
             <Label text="Zoom: Ctrl + Molette">
                <font>
