--- a/src/main/resources/fxml/canvas.fxml
+++ b/src/main/resources/fxml/canvas.fxml
@@ -1,36 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dbeditor.controller.CanvasController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/24" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dbeditor.controller.CanvasController">
    <top>
       <ToolBar fx:id="toolBar" prefWidth="1280.0" BorderPane.alignment="CENTER">
         <items>
-            <MenuBar>
-              <menus>
-                <Menu mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
-                  </items>
-                </Menu>
-              </menus>
-            </MenuBar>
             <MenuButton mnemonicParsing="false" style="-fx-background-color: #3b82f6;" text="📂 Ouvrir" textFill="WHITE">
               <items>
                   <Menu mnemonicParsing="false" text="Fichier">
@@ -55,36 +40,49 @@
             </MenuButton>
             <MenuButton mnemonicParsing="false" style="-fx-background-color: #10b981;" text="💾 Sauvegarder" textFill="WHITE">
                <items>
-                  <MenuItem mnemonicParsing="false">
-                     <graphic>
-                        <MenuButton mnemonicParsing="false" text="Fichier">
-                           <items>
-                              <MenuItem mnemonicParsing="false" onAction="#saveFileMYSQL" text="MYSQL" />
-                              <MenuItem mnemonicParsing="false" text="MSSQL" />
-                              <MenuItem mnemonicParsing="false" text="..." />
-                           </items>
-                        </MenuButton>
-                     </graphic>
-                  </MenuItem>
-                  <MenuItem mnemonicParsing="false">
-                     <graphic>
-                        <MenuButton mnemonicParsing="false" text="bdd">
-                           <items>
-                              <MenuItem mnemonicParsing="false" onAction="#saveDbMYSQL" text="MYSQL" />
-                              <MenuItem mnemonicParsing="false" text="MSSQL" />
-                              <MenuItem mnemonicParsing="false" text="..." />
-                           </items>
-                        </MenuButton>
-                     </graphic>
-                  </MenuItem>
+                  <Menu mnemonicParsing="false" text="Fichier">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#saveFileMYSQL" text="MYSQL" />
+                        <MenuItem mnemonicParsing="false" text="MSSQL" />
+                        <MenuItem mnemonicParsing="false" text="..." />
+                     </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="BDD">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#saveDbMYSQL" text="MYSQL" />
+                        <MenuItem mnemonicParsing="false" text="MSSQL" />
+                        <MenuItem mnemonicParsing="false" text="..." />
+                     </items>
+                  </Menu>
                   <MenuItem mnemonicParsing="false" text="DF (.txt)" />
                </items>
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </MenuButton>
-            <Separator orientation="VERTICAL" />
-            <Button mnemonicParsing="false" onAction="#changeTheme" text="theme" />
+            <MenuButton mnemonicParsing="false" style="-fx-background-color: #dd9e3f;" text="🎨 Theme" textFill="WHITE">
+               <items>
+                  <MenuItem fx:id="miLT" mnemonicParsing="false" text="Light Theme" />
+                  <MenuItem fx:id="miDT" mnemonicParsing="false" text="Dark Theme" />
+                  <Menu mnemonicParsing="false" text="Unspecified Menu">
+                    <items>
+                      <MenuItem fx:id="miPT" mnemonicParsing="false" text="use" />
+                        <MenuItem mnemonicParsing="false" onAction="#openPersoThemeParameter">
+                           <graphic>
+                              <ImageView fitHeight="15.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/parametre.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </MenuItem>
+                    </items>
+                  </Menu>
+               </items>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </MenuButton>
             <Region fx:id="spacer" prefWidth="100.0" />
             <Label text="Visual Database Editor">
                <font>
