--- a/src/main/resources/fxml/canvas.fxml
+++ b/src/main/resources/fxml/canvas.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuButton?>
@@ -11,21 +10,19 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/24" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dbeditor.controller.CanvasController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/24" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dbeditor.controller.CanvasController">
    <top>
-      <ToolBar fx:id="toolBar" prefWidth="1280.0" BorderPane.alignment="CENTER">
+      <ToolBar fx:id="toolBar" BorderPane.alignment="CENTER">
         <items>
             <MenuButton mnemonicParsing="false" style="-fx-background-color: #3b82f6;" text="📂 Ouvrir" textFill="WHITE">
               <items>
                   <Menu mnemonicParsing="false" text="Fichier">
                      <items>
                         <MenuItem mnemonicParsing="false" onAction="#openFileMYSQL" text="MYSQL" />
-                        <MenuItem mnemonicParsing="false" text="MSSQL" />
-                        <MenuItem mnemonicParsing="false" text="..." />
                      </items>
                   </Menu>
                   <Menu mnemonicParsing="false" text="BDD">
@@ -35,11 +32,8 @@
                               <MenuItem mnemonicParsing="false" />
                            </items>
                         </Menu>
-                        <MenuItem mnemonicParsing="false" text="MSSQL" />
-                        <MenuItem mnemonicParsing="false" text="..." />
                      </items>
                   </Menu>
-                  <MenuItem mnemonicParsing="false" text="DF (.txt)" />
               </items>
                <font>
                   <Font name="System Bold" size="12.0" />
@@ -49,23 +43,9 @@
                <items>
                   <Menu mnemonicParsing="false" text="Fichier">
                      <items>
-                        <Menu fx:id="menuSaveDbMYSQL" mnemonicParsing="false" text="MYSQL">
-                           <items>
-                              <MenuItem mnemonicParsing="false" />
-                           </items>
-                        </Menu>
-                        <MenuItem mnemonicParsing="false" text="MSSQL" />
-                        <MenuItem mnemonicParsing="false" text="..." />
+                        <MenuItem mnemonicParsing="false" onAction="#saveFileMYSQL" text="MYSQL" />
                      </items>
                   </Menu>
-                  <Menu mnemonicParsing="false" text="BDD">
-                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#saveDbMYSQL" text="MYSQL" />
-                        <MenuItem mnemonicParsing="false" text="MSSQL" />
-                        <MenuItem mnemonicParsing="false" text="..." />
-                     </items>
-                  </Menu>
-                  <MenuItem mnemonicParsing="false" text="DF (.txt)" />
                </items>
                <font>
                   <Font name="System Bold" size="12.0" />
@@ -75,7 +55,7 @@
                <items>
                   <MenuItem fx:id="miLT" mnemonicParsing="false" text="Light Theme" />
                   <MenuItem fx:id="miDT" mnemonicParsing="false" text="Dark Theme" />
-                  <Menu mnemonicParsing="false" text="Unspecified Menu">
+                  <Menu mnemonicParsing="false" text="Perso Theme">
                     <items>
                       <MenuItem fx:id="miPT" mnemonicParsing="false" text="use" />
                         <MenuItem mnemonicParsing="false" onAction="#openPersoThemeParameter">
@@ -95,11 +75,11 @@
                </font>
             </MenuButton>
             <Separator orientation="VERTICAL" />
-            <Region fx:id="spacer1" prefWidth="100.0" />
+            <Region fx:id="spacer1" />
             <Separator orientation="VERTICAL" />
             <TextField fx:id="tfDbName" />
             <Separator orientation="VERTICAL" />
-            <Region fx:id="spacer2" prefWidth="100.0" />
+            <Region fx:id="spacer2" />
             <Separator orientation="VERTICAL" />
             <Label text="Visual Database Editor">
                <font>
@@ -110,17 +90,6 @@
       </ToolBar>
    </top>
    <center>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <center>
-            <Pane fx:id="pane" BorderPane.alignment="CENTER" />
-         </center>
-         <top>
-            <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-              <items>
-                <Button mnemonicParsing="false" text="Button" />
-              </items>
-            </ToolBar>
-         </top>
-      </BorderPane>
+      <StackPane fx:id="spPane" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
