Ajout de la vues des dépendance fonctionelle

--- a/src/main/resources/fxml/canvas.fxml
+++ b/src/main/resources/fxml/canvas.fxml
@@ -27,11 +27,7 @@
                   </Menu>
                   <Menu mnemonicParsing="false" text="BDD">
                      <items>
-                        <Menu fx:id="menuOpenDbMYSQL" mnemonicParsing="false" text="MYSQL">
-                           <items>
-                              <MenuItem mnemonicParsing="false" />
-                           </items>
-                        </Menu>
+                        <Menu fx:id="menuOpenDbMYSQL" mnemonicParsing="false" text="MYSQL" />
                      </items>
                   </Menu>
               </items>
