--- a/src/main/resources/fxml/view/df.fxml
+++ b/src/main/resources/fxml/view/df.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Group?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
-<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/24" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dbeditor.controller.view.MldController">
+<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/24" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dbeditor.controller.view.DfController">
    <top>
       <ToolBar fx:id="toolbar" BorderPane.alignment="CENTER">
          <items>
@@ -17,7 +17,7 @@
    <center>
       <Pane fx:id="pane" BorderPane.alignment="CENTER">
          <children>
-            <Group fx:id="group" />
+            <TextArea fx:id="textArea" />
          </children>
       </Pane>
    </center>
