--- a/src/main/resources/fxml/view/mcd.fxml
+++ b/src/main/resources/fxml/view/mcd.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
@@ -15,6 +16,7 @@
             <Button fx:id="btnEntity" mnemonicParsing="false" text="Entité" />
             <Button fx:id="btnAssociation" mnemonicParsing="false" text="Association" />
             <Button fx:id="btnLink" mnemonicParsing="false" text="Lien" />
+            <Label fx:id="zlLabel" text="zoom level" />
          </items>
       </ToolBar>
    </top>
