--- a/src/main/resources/fxml/view/mcd.fxml
+++ b/src/main/resources/fxml/view/mcd.fxml
@@ -13,9 +13,9 @@
       <ToolBar fx:id="toolbar" BorderPane.alignment="CENTER">
          <items>
             <ComboBox fx:id="cb" />
-            <Button fx:id="btnEntity" mnemonicParsing="false" text="Entité" />
-            <Button fx:id="btnAssociation" mnemonicParsing="false" text="Association" />
-            <Button fx:id="btnLink" mnemonicParsing="false" text="Lien" />
+            <Button fx:id="btnTable" mnemonicParsing="false" onAction="#addTable" text="Table" />
+            <Button fx:id="btnAssociation" mnemonicParsing="false" onAction="#addAssociation" text="Association" />
+            <Button fx:id="btnLink" mnemonicParsing="false" onAction="#addLink" text="Lien" />
             <Label fx:id="zlLabel" text="zoom level" />
          </items>
       </ToolBar>
