--- a/src/main/resources/fxml/view/mld.fxml
+++ b/src/main/resources/fxml/view/mld.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
@@ -11,6 +12,7 @@
       <ToolBar fx:id="toolbar" BorderPane.alignment="CENTER">
          <items>
             <ComboBox fx:id="cb" />
+            <Label fx:id="zlLabel" text="zoom level" />
          </items>
       </ToolBar>
    </top>
